Organized CSS, Validation
Added alt tags for images so everything validates except for the
aria-expand property. Tried fiddling with fixing the navigation, no
solution yet.

--- a/projects/afan.html
+++ b/projects/afan.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Alliance for the Future of Agriculture in Nebraska</p>
         <h5>Application:</h5><p>Promotional Booklet (Photography, Print)</p>
         <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan's knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock. I was able to appeal to an audience of males ranging between ages 18 and 28 by using sharp imagery and simplistic graphics to present the information in an engaging way.</p>
       </div>
@@ -57,13 +56,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
