--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Beb's Jam</p>
         <h5>Application:</h5><p>Label Design (Package)</p>
         <p>Beb's Jam was founded in 2010 by a couple in rural Maine. The business started out as a just a hobby and turned into a full-steam-ahead jam producing operation. They wanted to target couples between ages 25 and 50 who were conscious about their health and were looking for unique flavors of jam. I was able to create a cohesive line of labels that called attention to the rustic home-town of the founding couple.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
