--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Greasy Garage</p>
         <h5>Application:</h5><p>Logo and Style Guide (Identity, Print)</p>
         <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle. By using grunge textures, I was able to call the grit and grime that goes along with mechanical work. The branded style guide lays out the guidelines for use of the identity and brand components.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
