--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Heartland Autobody Incorporated</p>
         <h5>Application:</h5><p>Web Layout and Design (Web)</p>
         <p>Heartland Autobody offers complete collision repair services for and all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy Generation Y. The new site features compelling imagery, company reviews, and an edgy, industrial vibe that calls to the nature of the work.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
