--- a/projects/hyvee.html
+++ b/projects/hyvee.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>HyVee (Floral Department)</p>
         <h5>Application:</h5><p>Ad Campaign (Photography, Web, Print)</p>
         <p>HyVee is a large grocery store chain that prides themselves on quality products and customer service. HyVee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines will help draw an emotional and humorous connection to a man looking to purchase flowers. An additional online component offers a fun and simple way to order flowers and set dates for future reference.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 column medium-12 small-12 project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
