--- a/projects/maroon5.html
+++ b/projects/maroon5.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Maroon 5</p>
         <h5>Application:</h5><p>Tour Booklet (Print)</p>
         <p>Maroon 5 is a pop music group born and bred in Los Angeles. With their last album, V, the group will embark on a world tour beginning in February 2015. They were looking for a booklet that reflects the group's personality and offered information regarding the tour. To appeal to the young Generation Y audience, I used bold patterns and colors partnered with experimental spreads to express the same energy Maroon 5 brings through in their music.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
