--- a/projects/nra.html
+++ b/projects/nra.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>National Rifle Association</p>
         <h5>Application:</h5><p>Social Activism Campaign, Promotional Design (Promotional, Print)</p>
         <p>The National Rifle Association was founded in 1871 as a group whose mission was to advance rifle marksmanship. The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities. Using distinctive silhouettes to represent each educational area, I supported them with the tagline, "Serving. Protecting. Teaching."</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
