--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="../img/index.svg"></li>
+          <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -47,7 +47,6 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Pup's Paws</p>
         <h5>Application:</h5><p>Product Branding and Package Development (Package)</p>
         <p>Founded in a small-town shoppe, Pup's Paws is a newly emerging dog food and supply company that was looking an identity and packaging system that better expressed their standards. They are looking to attract health concious Millenials by using a natural process to produce all items and food. Using recycled paper and a more personal, hand-written approach to type, I was able to create a cohesive system that reflects the small-town business and their quality goods.</p>
       </div>
@@ -56,13 +55,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg">
+      <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
 
