--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu"  aria-expanded="false" class="right-off-canvas-toggle menu-icon"><span></span></a>
   </div>
 </nav>
 
@@ -27,7 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
-          <li><img src="img/index.svg"></li>
+          <li><img src="img/index.svg" alt="logo"></li>
           <li><a href="#">HOME</a></li>
           <li><a href="#thepassion">THE PASSION</a></li>
           <li><a href="#justme">JUST ME</a></li>
@@ -41,7 +41,7 @@
 
    <div class="row h-logo">
       <div class="large-8 medium-8 large-offset-1 medium-offset-1 columns">
-        <img src="img/index.svg">
+        <img src="img/index.svg" alt="logo">
       </div>
     </div> 
 
@@ -68,27 +68,27 @@
           <h3>Hyvee Floral</h3>
           <p>Photography, Web, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
-        <a href="projects/greasy_garage.html">
+        <a href="projects/greasy-garage.html">
           <h3>Greasy Garage</h3>
           <p>Identity, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
-        <a href="projects/shotgun_weddings.html">
+        <a href="projects/shotgun-weddings.html">
           <h3>Shotgun Weddings</h3>
           <p>Identity</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -98,7 +98,7 @@
           <h3>Mommy's Little Monster</h3>
           <p>Identity System, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -108,7 +108,7 @@
           <h3>Maroon 5</h3>
           <p>Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -118,7 +118,7 @@
           <h3>Heartland Autobody</h3>
           <p>Web</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -128,7 +128,7 @@
           <h3>Starbucks</h3>
           <p>Photography, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -138,17 +138,17 @@
           <h3>Alliance for the Future of Agriculture in Nebraska</h3>
           <p>Photography, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
-        <a href="projects/pups_paws.html">
+        <a href="projects/pups-paws.html">
           <h3>Pup's Paws</h3>
           <p>Package</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -158,7 +158,7 @@
           <h3>Pinnacle Bank Arena</h3>
           <p>Mobile</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
     
@@ -168,17 +168,17 @@
           <h3>National Rifle Association</h3>
           <p>Promotional, Print</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
-        <a href="projects/bebs_jam.html">
+        <a href="projects/bebs-jam.html">
           <h3>Beb's Jam</h3>
           <p>Package</p>
         </a>
-        <img src="img/tree.jpg">
+        <img src="img/tree.jpg" alt="tree">
       </div>
     </div>
 
@@ -206,15 +206,15 @@
 
 
     <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg">
+      <img src="img/tree.jpg" alt="tree">
     </div>
 
     <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg">
+      <img src="img/tree.jpg" alt="tree">
     </div>
 
     <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg">
+      <img src="img/tree.jpg" alt="tree">
     </div>
 
     <div class="row">
@@ -235,7 +235,7 @@
             <input type="text" placeholder="example@example.com" />
             </label>
 
-            <label>How can I help?
+            <label>How can I help?</label>
             <textarea placeholder=""></textarea>
 
             <a href="#" class="button expand">Submit</a>
