--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Off Canvas Menu -->
 
 <nav id="menu">
-    <a href="#menu" class="menu-link">AY</a>
+    <a href="#menu" class="menu-link">MENU</a>
         <ul>
           <li><img src="img/index.svg" alt="logo"></li>
           <li><a href="#">HOME</a></li>
@@ -248,12 +248,7 @@
 
 
 
-
-
-
-
-
-  </div>
+</div>
 
 
   <!-- close the off-canvas menu -->
@@ -270,5 +265,9 @@
           $(".container").toggleClass("active");
     });
     </script>
+
+
+
+
   </body>
 </html>
