--- a/projects/afan.html
+++ b/projects/afan.html
@@ -11,21 +11,10 @@
   <body>
 
 
-<nav class="tab-bar">
-  <div class="right-small">
-    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
-  </div>
-</nav>
-
-
-
-<div class="off-canvas-wrap" data-offcanvas>
-  <div class="inner-wrap">
-
-
     <!-- Off Canvas Menu -->
-    <aside class="right-off-canvas-menu">
-        <!-- whatever you want goes here -->
+
+<nav id="menu">
+    <a href="#menu" class="menu-link">MENU</a>
         <ul>
           <li><img src="../img/index.svg" alt="logo"></li>
           <li><a href="../index.html">HOME</a></li>
@@ -34,9 +23,12 @@
           <li><a href="../index.html#mydrive">MY DRIVE</a></li>
           <li><a href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
-    </aside>
+</nav>
+
 
     <!-- main content goes here -->
+<div class="container">
+
 
 
     <div class="row">
@@ -69,25 +61,29 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="starbucks.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="pups-paws.html">NEXT</a></div>
+    <div class="large-6 columns medium-6"><a href="starbucks.html">PREVIOUS</a></div>
+    <div class="large-6 columns medium-6"><a href="pups-paws.html">NEXT</a></div>
   </div>
 </footer>
 
 
 
+</div>
+
 
   <!-- close the off-canvas menu -->
-  <a class="exit-off-canvas"></a>
-
-  </div>
-</div>
 
 
     <script src="../js/vendor/jquery.js"></script>
     <script src="../js/foundation.min.js"></script>
     <script>
       $(document).foundation();
+    </script>
+    <script>
+    $(".menu-link").click(function(){
+          $("#menu").toggleClass("active");
+          $(".container").toggleClass("active");
+    });
     </script>
   </body>
 </html>
