--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
   <body>
 
 
-    <!-- Off Canvas Menu -->
-
+<!-- Off Canvas Menu -->
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
           <li><img src="img/index.svg" alt="logo"></li>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#thepassion">THE PASSION</a></li>
-          <li><a href="#justme">JUST ME</a></li>
-          <li><a href="#mydrive">MY DRIVE</a></li>
-          <li><a href="#talkdesign">LET'S TALK DESIGN</a></li>
+          <li><a class="sub-link" href="#">HOME</a></li>
+          <li><a class="sub-link" href="#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="#justme">JUST ME</a></li>
+          <li><a class="sub-link" href="#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
 
 
-    <!-- main content goes here -->
+<!-- main content goes here -->
 <div class="container">
 
 
@@ -247,27 +246,53 @@
 </footer>
 
 
-
+<!-- close the body container -->
 </div>
 
 
-  <!-- close the off-canvas menu -->
 
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-    <script>
-    $(".menu-link").click(function(){
-          $("#menu").toggleClass("active");
-          $(".container").toggleClass("active");
+<script src="js/vendor/jquery.js"></script>
+
+<script src="js/foundation.min.js"></script>
+
+<script>
+  $(document).foundation();
+</script>
+
+
+<!-- navigation scripts -->
+<script>
+  $(".menu-link").click(function(){
+    $("#menu").toggleClass("active");
+    $(".container").toggleClass("active");
     });
-    </script>
+</script>
 
+<script>
+  $(".sub-link").click(function(){
+    $("#menu").toggleClass("active");
+    $(".container").toggleClass("active");
+    });
+</script>
 
-
+<!-- scroll script -->
+<script>
+    $(document).ready(function(){
+      $('a[href*=#]:not([href=#])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+          if (target.length) {
+            $('html,body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
+</script>
 
   </body>
 </html>
