--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -12,17 +12,16 @@
 
 
 <!-- Off Canvas Menu -->
-
 <nav id="menu">
-  <a href="#menu" class="menu-link">MENU</a>
-    <ul>
-      <li><img src="../img/index.svg" alt="logo"></li>
-      <li><a href="../index.html">HOME</a></li>
-      <li><a href="../index.html#thepassion">THE PASSION</a></li>
-      <li><a href="../index.html#justme">JUST ME</a></li>
-      <li><a href="../index.html#mydrive">MY DRIVE</a></li>
-      <li><a href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
-    </ul>
+    <a href="#menu" class="menu-link">MENU</a>
+        <ul>
+          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html">HOME</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
+        </ul>
 </nav>
 
 
@@ -38,7 +37,8 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Application:</h5><p>Logo (Identity)</p>
+        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. They are a playful, yet official spin off of the stereotypical "shotgun wedding". Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y who are most likely to get married under quick circumstances. The logo represents the young energy of Millenials with a more serious typeface to call back to the legitimacy of the services provided.</p>
       </div>
     </div> 
 
@@ -64,22 +64,53 @@
 </footer>
 
 
+<!-- close the body container -->
 </div>
 
 
-    <script src="../js/vendor/jquery.js"></script>
-    <script src="../js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-    <script>
-    $(".menu-link").click(function(){
-          $("#menu").toggleClass("active");
-          $(".container").toggleClass("active");
+
+
+<script src="../js/vendor/jquery.js"></script>
+
+<script src="../js/foundation.min.js"></script>
+
+<script>
+  $(document).foundation();
+</script>
+
+
+<!-- navigation scripts -->
+<script>
+  $(".menu-link").click(function(){
+    $("#menu").toggleClass("active");
+    $(".container").toggleClass("active");
     });
-    </script>
+</script>
 
+<script>
+  $(".sub-link").click(function(){
+    $("#menu").toggleClass("active");
+    $(".container").toggleClass("active");
+    });
+</script>
 
+<!-- scroll script -->
+<script>
+    $(document).ready(function(){
+      $('a[href*=#]:not([href=#])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+          if (target.length) {
+            $('html,body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
+</script>
 
   </body>
 </html>
