--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="img/index.svg" alt="logo"></li>
+          <li><img src="img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="#">HOME</a></li>
           <li><a class="sub-link" href="#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="#justme">JUST ME</a></li>
@@ -30,9 +30,9 @@
 
 
 
-   <div class="row h-logo">
+   <div class="row hide-for-small-only">
       <div class="large-8 medium-8 large-offset-1 medium-offset-1 columns">
-        <img src="img/index.svg" alt="logo">
+        <img src="img/logo.svg" alt="logo">
       </div>
     </div> 
 
@@ -221,7 +221,7 @@
       </div>
 
         <form>
-          <div class="large-6 medium-6 large-offset-1 medium-offset-1 columns end">
+          <div class="large-6 medium-6 large-offset-1 medium-offset-1 columns contact-form end">
             <label>E-mail
             <input type="text" placeholder="example@example.com" />
             </label>
