--- a/projects/afan.html
+++ b/projects/afan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Alliance for the Future of Agriculture</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Promotional Booklet (Photography, Print)</p>
-        <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan's knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock. I was able to appeal to an audience of males ranging between ages 18 and 28 by using sharp imagery and simplistic graphics to present the information in an engaging way.</p>
+        <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28.</p>
       </div>
       </div>
 
@@ -58,10 +58,17 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 columns medium-6"><a href="starbucks.html">PREVIOUS</a></div>
     <div class="large-6 columns medium-6"><a href="pups-paws.html">NEXT</a></div>
+  </div>
+
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
