--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Beb's Jam</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -55,13 +55,19 @@
     </div>
   </div>
 
-
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="nra.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="hyvee.html">NEXT</a></div>
   </div>
+
+  <footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
+  </div>
 </footer>
+
 
 
 
