--- a/projects/hyvee.html
+++ b/projects/hyvee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Hy-Vee Floral</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Ad Campaign (Photography, Web, Print)</p>
-        <p>HyVee is a large grocery store chain that prides themselves on quality products and customer service. HyVee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines will help draw an emotional and humorous connection to a man looking to purchase flowers. An additional online component offers a fun and simple way to order flowers and set dates for future reference.</p>
+        <p>HyVee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines will help draw an emotional and humorous connection to a man looking to purchase flowers.</p>
       </div>
     </div> 
 
@@ -57,12 +57,16 @@
   </div>
 
 
-
-
-<footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="bebs-jam.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="greasy-garage.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
