--- a/projects/nra.html
+++ b/projects/nra.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | National Rifle Association</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -16,7 +16,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Social Activism Campaign, Promotional Design (Promotional, Print)</p>
-        <p>The National Rifle Association was founded in 1871 as a group whose mission was to advance rifle marksmanship. The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities. Using distinctive silhouettes to represent each educational area, I supported them with the tagline, "Serving. Protecting. Teaching."</p>
+        <p>The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities.</p>
       </div>
     </div> 
 
@@ -58,10 +58,16 @@
 
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="pinnacle.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="bebs-jam.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
