--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Pup's Paws</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Product Branding and Package Development (Package)</p>
-        <p>Founded in a small-town shoppe, Pup's Paws is a newly emerging dog food and supply company that was looking an identity and packaging system that better expressed their standards. They are looking to attract health concious Millenials by using a natural process to produce all items and food. Using recycled paper and a more personal, hand-written approach to type, I was able to create a cohesive system that reflects the small-town business and their quality goods.</p>
+        <p>Founded in a small-town shoppe, Pup’s Paws is a newly emerging dog food and supply company that was looking for an identity and packaging system that better expressed their standards. They were looking to attract health concious Millenials by using a natural process to produce all items and food.</p>
       </div>
     </div> 
 
@@ -56,10 +56,16 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="afan.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="pinnacle.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
