--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Greasy Garage</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Logo and Style Guide (Identity, Print)</p>
-        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle. By using grunge textures, I was able to call the grit and grime that goes along with mechanical work. The branded style guide lays out the guidelines for use of the identity and brand components.</p>
+        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle.</p>
       </div>
     </div> 
 
@@ -56,10 +56,16 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="hyvee.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
