--- a/projects/monster.html
+++ b/projects/monster.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Mommy's Little Monster</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Logo and Identity System (Identity, Print)</p>
-        <p>Mommy's Little Monster is a specialty clothing line for children featured at a local boutique. Parents, specifically Millennials who are mothers, are the target audience. With the logo, the company wanted to attract those fashion concious mothers who are looking for more contemporary children's clothing. The logo and system reflects a child's personality in that it is playful and youthful, drawing an element of emotion.</p>
+        <p>Mommy’s Little Monster is a specialty clothing line for children featured at a local boutique. Parents, specifically Millennials who are mothers, are the target audience. The logo and system reflects a child’s personality in that it is playful and youthful, drawing an element of emotion and attracting those fashion conscious mothers.</p>
       </div>
     </div> 
 
@@ -55,10 +55,16 @@
     </div>
   </div>
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="maroon5.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
