--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Pinnacle Bank Arena</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -16,7 +16,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Mobile Ticket Application (Mobile)</p>
-        <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets and a mobile application was the way to go. Generation Y, of whom 60% download mobile applications, is the primary audience for this app. I was able to approach the design in a way that reflected the architecture of the physical Area. I implemented similar geometric shapes, and center compositions to present the information clearly.</p>
+        <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets and a mobile application was the way to go. Generation Y, of whom 60% download mobile applications, is the primary audience for this app.</p>
       </div>
     </div> 
 
@@ -56,10 +56,16 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="pups-paws.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="nra.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
