--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Shotgun Weddings</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Logo (Identity)</p>
-        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. They are a playful, yet official spin off of the stereotypical "shotgun wedding". Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y who are most likely to get married under quick circumstances. The logo represents the young energy of Millenials with a more serious typeface to call back to the legitimacy of the services provided.</p>
+        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y who are most likely to get married under quick circumstances.</p>
       </div>
     </div> 
 
@@ -56,10 +56,16 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="greasy-garage.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="monster.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
