--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>editionh</title>
+    <title>editionh | Starbucks</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
@@ -15,7 +15,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link">MENU</a>
         <ul>
-          <li><img src="../img/index.svg" alt="logo"></li>
+          <li><img src="../img/logo.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h5>Application:</h5><p>Annual Report (Photography, Print)</p>
-        <p>Starbucks is a national coffeehouse chain whose company is based out of Seattle, Washingtion. They were in need of an annual report that reflected the company's long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40. Using strong graphics and illustrations, I was able to enhance otherwise monotonous information into something engaging.</p>
+        <p>Starbucks, a national coffeehouse chain, was in need of an annual report that reflected the company’s long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40.</p>
       </div>
     </div> 
 
@@ -56,10 +56,16 @@
   </div>
 
 
-  <footer>
-  <div class="row">
+  <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="heartland.html">PREVIOUS</a></div>
     <div class="large-6 medium-6 columns"><a href="afan.html">NEXT</a></div>
+  </div>
+
+<footer class="black">
+  <div class="row">
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
