--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="css/fonts/stylesheet.css"/>
+
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -46,7 +48,7 @@
 
     <div class="row">
       <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
-        <div id="thepassion"><h2>THE PASSION</h2></div>
+        <div id="thepassion"><h2>MY PASSION</h2></div>
       </div>
     </div> 
 
@@ -191,7 +193,7 @@
 
     <div class="row">
       <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
-        <div id="mydrive"><h2>MY DRIVE</h2></div>
+        <div id="mydrive"><h2>WHAT DRIVES ME</h2></div>
       </div>
     </div>
 
@@ -237,11 +239,11 @@
 
 
 
-<footer class="black">
+<footer>
   <div class="row">
-    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
+    <div class="large-4 medium-4 columns"><p>info@dakotahnicole.com</p></div>
+    <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
 
